--- a/templates/register_customer_form.html
+++ b/templates/register_customer_form.html
@@ -42,9 +42,7 @@
                   </div>
                   <div class="form-group">
                     <label for="address">Business Address</label>
-                    <address class="form-control">
-                      <textarea name="address" type="text" class="form-control" rows="8" cols="80"></textarea>
-                    </address>
+                    <input type="text" class="form-control" name="businessadd"/>
                   </div>
 
                     <div class="form-group">
