--- a/templates/admin_template.html
+++ b/templates/admin_template.html
@@ -148,6 +148,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
+              <li><a class="" href="{{url_for('admin_add_sales')}}">Record Sales</a></li>
               <li><a class="" href="{{url_for('admin_sales_bydate_List')}}">View Sales</a></li>
               <li><a class="" href="{{url_for('admin_allsales_List')}}">View All Sales</a></li>
               <li><a class="" href="#">Add Stocks</a></li>
