--- a/templates/remove_customer.html
+++ b/templates/remove_customer.html
@@ -29,7 +29,7 @@
                   			<input class="" type ="checkbox" name ="chkAns" value="Agreed" required />
                       </div>
 
-                    <button type="submit" class="btn btn-primary" value="Register Now">REMOVE PRODUCT</button>
+                    <button type="submit" class="btn btn-primary" value="Register Now">REMOVE CUSTOMER</button>
                   </table>
                 </div>
               </form>
