added first hdb-admin enteries

--- a/templates/register_admin_form.html
+++ b/templates/register_admin_form.html
@@ -29,7 +29,7 @@
     			<td>Gender</td><br/>
     			<td><input type ="radio" name="radgender" value ="male" id="male"/>
     			<label for = "male">Male</label><br/>
-    			<input type ="radio" name="radgender" value ="female" id ="female"
+    			<input type ="radio" name="gender" value ="female" id ="female"
           required/>
     			<label for ="female">Female</label><br/></td>
     		</tr>
@@ -52,7 +52,7 @@
 
     			<tr>
     				<td><label for="passWord">Password:</label></td>
-    				<td><input class = "contact" type ="text" name="pwdUser"
+    				<td><input class = "contact" type ="password" name="password"
               required/></td>
     			</tr>
     			<tr>
